[tool.poetry]
name = "museums"
version = "0.1.0"
description = ""
authors = ["Yanick Chénard <yanickc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wikipedia = "^1.4.0"
pandas = "^1.1.1"
xlrd = "^1.2.0"
lxml = "^4.5.2"
sklearn = "^0.0"
streamlit = "^0.66.0"
plotly = "^4.9.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.3.1"
black = "^20.8b1"
flake8 = "^3.8.3"
mypy = "^0.782"
seaborn = "^0.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
